# ALCLabs

./: README.md  bert.py  comparador.py  cross_validation.py  dataloader.py  evaluate.py  modelos_clasicos.py  preprocess.py  pyproject.toml  resultados.csv  test.ipynb  train.py
Exist2025/: bert-base-multilingual-cased_soft_3_3.json  dataloader.py  task3_1_hard_ScalaR_1.json  task3_1_hard_ScalaR_2.json  task3_1_soft_ScalaR_1.json  task3_1_soft_ScalaR_2.json  task3_2_hard_ScalaR_1.json  task3_2_hard_ScalaR_2.json  task3_2_soft_ScalaR_1.json  task3_2_soft_ScalaR_2.json  task3_3_hard_ScalaR_1.json  task3_3_hard_ScalaR_2.json  task3_3_soft_ScalaR_1.json  task3_3_soft_ScalaR_2.json  test.ipynb  test2.ipynb  train.py  val.py
Exist2025/data/: EXIST2025_test_clean.json
Exist2025/exist2025_ScalaR/: task3_1_hard_ScalaR_1.json  task3_1_hard_ScalaR_2.json  task3_1_soft_ScalaR_1.json  task3_1_soft_ScalaR_2.json  task3_2_hard_ScalaR_1.json  task3_2_hard_ScalaR_2.json  task3_2_soft_ScalaR_1.json  task3_2_soft_ScalaR_2.json  task3_3_hard_ScalaR_1.json  task3_3_hard_ScalaR_2.json  task3_3_soft_ScalaR_1.json  task3_3_soft_ScalaR_2.json
Lab1/: bert.py  dataloader.py  preprocess.py  pyproject.toml  test_pred_gen.py
Lab1/outputs/: bert.json  logreg.json  rf.json
Lab2/: SVC.py  bert.py  classic.py  comparador.py  dataloader.py  pyproject.toml  resultados.py  run_colab_bert.ipynb  runs.ipynb
Lab2/data/: dataloader.py
Lab2/outputs/: bert.json  rf.json  (+1 more)
Lab3/: bert.py  dataloader.py  evaluate.py  resultados.py  runs.ipynb
outputs/: bert_3_ep.json  nb.json  svm.json  xgb.json
(+19 files in other folders)
